--- a/strona2.htm
+++ b/strona2.htm
@@ -21,7 +21,6 @@
             <p id="link"><em><a href="#czaturanga">Czaturanga (Indie)</a></em></p>
         <h2 id="shogi">Shōgi</h2>
         <div class="content">
-        <p>uzupelnij rysunkami z http://www.kgj.pjwstk.edu.pl/shogi/zasady.html</p>
         <p>Zasady shōgi nie są trudne, i jak ktoś umie grać w szachy tradycyjne, szybko może przestawić się na japońskie zasady. Jako że shōgi wykorzystują więcej figur, plansza jest większa i jest rozmiaru 9 na 9 kratek. Na początku należy rozstawić figury na planszy w następujący sposób:
 
 	
@@ -31,46 +30,68 @@
 
 
         <p>Ruchy figur:
-        Król
-        Król może poruszać w każdym kierunku o jedno pole.
+        Król</p> <br>
+        <div class="image-alt">
+        <img src="K1.jpg">
+        </div><br>
+            <p>Król może poruszać w każdym kierunku o jedno pole.</p>
 
 
 
-        Wieża
+        <p>Wieża</p>
+        <div class="image-alt">
+        <img src="hisha.jpg">
+        </div><br>
         Wieża może poruszać się o dowolna ilość pól po liniach pionowych i poziomych.
 
 
 
-        Goniec
-        Goniec może poruszać się o dowolną ilość pól po przekątnych.
+            <p>Goniec</p>
+        <div class="image-alt">
+        <img src="kaku.jpg">
+        </div><br>
+        <p>Goniec może poruszać się o dowolną ilość pól po przekątnych.</p>
 
 
 
-        Złoty generał
-        Złoty generał może poruszyć się o jedno pole w sześciu kierunkach: do przodu po prostej i po przekątnych, po prostej w lewo i prawo oraz do tyłu po prostej.Nie może się poruszać po przekątnych w tył.
+        <p>Złoty generał</p>
+        <div class="image-alt">
+        <img src="kin.jpg">
+        </div><br>
+        <p>Złoty generał może poruszyć się o jedno pole w sześciu kierunkach: do przodu po prostej i po przekątnych, po prostej w lewo i prawo oraz do tyłu po prostej.Nie może się poruszać po przekątnych w tył.</p>
 
 
 
-        Srebrny generał
-        Srebrny generał może poruszyć się o jedno pole w pięciu kierunkach: do przodu po prostej i przekątnych oraz do tyłu po przekątnych. Nie może chodzić na boki oraz do tyłu po prostej.
+        <p>Srebrny generał</p>
+        <div class="image-alt">
+        <img src="gin.jpg">
+        </div><br>
+        <p>Srebrny generał może poruszyć się o jedno pole w pięciu kierunkach: do przodu po prostej i przekątnych oraz do tyłu po przekątnych. Nie może chodzić na boki oraz do tyłu po prostej.</p>
 
 
 
-        Skoczek
-        Skoczek, jak jego nazwa wskazuje może przeskakiwać inne figury. Porusza się tylko do przodu przeskakujać o jedno pole w bok i dwa do przodu (tak jak na rysunku). Warto zwrócić uwagę że w przeciwieństwie do szachów zachodznich w shogi skoczek nie może ruszać się skacząć na boki ani do tyłu.
+        <p>Skoczek</p>
+        <div class="image-alt">
+        <img src="keima.jpg">
+        </div><br>   
+        <p>Skoczek, jak jego nazwa wskazuje może przeskakiwać inne figury. Porusza się tylko do przodu przeskakujać o jedno pole w bok i dwa do przodu (tak jak na rysunku). Warto zwrócić uwagę że w przeciwieństwie do szachów zachodznich w shogi skoczek nie może ruszać się skacząć na boki ani do tyłu.</p>
 
 
 
-        Lanca
-        Lanca może poruszyć się o dowolną liczbę pól, lecz tylko do przodu.
+        <p>Lanca</p>
+        <div class="image-alt">
+        <img src="kyosha.jpg">
+        </div><br>
+        <p>Lanca może poruszyć się o dowolną liczbę pól, lecz tylko do przodu.</p>
 
 
 
-        Pionek
-        Pionek może poruszyć się tylo o jedno pole do przodu. W przeciwieństwie do zachodnich szachów, bije też tylko do przodu! (nie po skosach)
+        <p>Pionek</p>
+        <div class="image-alt">
+        <img src="fu.jpg">
+        </div><br>
+        <p>Pionek może poruszyć się tylo o jedno pole do przodu. W przeciwieństwie do zachodnich szachów, bije też tylko do przodu! (nie po skosach)</p>
 
-
-        </p>
         <p>Planszę do gry w shōgi można podzielić na trzy strefy:
 
         Strefę 1 (watahsi- tu są nasze figury) (kolor szary)
@@ -104,9 +125,9 @@
         Nie można przywrócić pionka w linii (pionowej), w której już jest jeden pionek.
         Pionek nie może być przywrócony tak, żeby dawał szachmata (lecz inne figury można tak przywracać)
 
-        Gra kończy się gdy jeden z króli będzie zagrożony biciem i nie będzie miał jak się przed tym obronić.</p>
+        Gra kończy się gdy jeden z króli będzie zagrożony biciem i nie będzie miał jak się przed tym obronić.</p></div>
         <h2 id="xiangqi">Xiangqi</h2>
-        <p>https://www.kurnik.pl/xiangqi/zasady.phtml#:~:text=Król%20może%20przemieszczać%20się%20na,między%20nimi%20żadnej%20innej%20figury. 
+        <div class="content"> 
         <p>Figury występujące w kolorach czerwonym oraz czarnym z ich początkowym ustawieniem na planszy przedstawiono na ilustracji poniżej (w niniejszej treści używane są symboliczne oznaczenia figur, ponieważ tradycyjne, chińskie znaki, mogłyby być kłopotliwe).
 
         szachy chińskie, plansza i ustawienie figur
@@ -159,8 +180,10 @@
 
         Niedozwolone jest dawanie szacha lub próba bicia jednej z figur przeciwnika w kółko w ten sam sposób (tzw. molestacja).
 	    </p>
+            </div>
         <h2 id="janggi">Janggi</h2>
-        <p>http://www.janggi.pl/zasady-gry-w-janggi/</p><p> 1.Grę zaczyna gracz z pionkami niebieskimi (lub zielonymi). Ze względu na to, że zielone (niebieskie) rozpoczynają grę, czerwonym przyznaje się ekstra punkty, żeby zrekompensować różnicę. Czyli czerwone zaczynają grę mając 73,5pkt natomiast zielone – 72pkt (to odjęcie punktów graczowi niebieskiemu określa się mianem „komi”). Opis figur oraz sposobu poruszania znajduje się na stronie z opisem figur.</p>
+        <div class="content">
+        <p> 1.Grę zaczyna gracz z pionkami niebieskimi (lub zielonymi). Ze względu na to, że zielone (niebieskie) rozpoczynają grę, czerwonym przyznaje się ekstra punkty, żeby zrekompensować różnicę. Czyli czerwone zaczynają grę mając 73,5pkt natomiast zielone – 72pkt (to odjęcie punktów graczowi niebieskiemu określa się mianem „komi”). Opis figur oraz sposobu poruszania znajduje się na stronie z opisem figur.</p>
 
         <p>2. Wygrywa zawodnik, który zbije generała przeciwnika.</p>
 
@@ -179,57 +202,22 @@
         Figury w Janggi mają najczęściej kształt ośmiokątów i są zrobione z tworzywa sztucznego,  można też spotkać zestawy do Janggi z figurami drewnianymi. Jeśli chodzi o rozróżnienie figur to na początku (dla Europejczyka) nie jest to łatwe, ze względu na to, że figury nie różnią się kształtem (jedynie rozmiarem), a poszczególne figury oznaczone są za pomocą „krzaków” :). Jeden gracz ma oznaczenia czerwone – drugi zielone bądź niebieskie.Każdy gracz rozpoczyna grę mając na planszy pięciu żołnierzy, dwa słonie, dwa konie, dwa rydwany, dwa działa, dwóch doradców i jednego generała. Oczywiście jak w przypadku wielu gier strategicznych dopuszcza się handicap (znacznie silniejszy gracz ściąga jakąś figurę przed rozpoczęciem gry startując z osłabioną armią – co ma wyrównać przewagę w umiejętnościach).<p>
 
         <p>Generał (Król)
-        blue_generalred_general
-
-
-
-
-
-
 
         Można powiedzieć, że jest to odpowiednik szachowego króla. Bywa też określany mianem „janggun”. Spotyka się różne określenia generałów – wg chińskiej nomenklatury czerwony to Han a zielony/niebieski Chu/Cho (nazwy związane są z okresem rywalizacji pomiędzy dynastiami chinskimi). W Korei Południowej używa się określeń jang (generał) dla czerwonego oraz gwan (minister) dla zielonego wodza. Generała łatwo rozpoznać ponieważ jest to największa (gabarytowo) figura w Janggi. Grę rozpoczyna w pałcu (po koreańsku „goong”) – albo w środkowej części, albo w środku dolnej krawędzi. Generał porusza się o jedno pole w każdą stronę, ale wyłącznie w pałacu. Oczywiście utrata generała oznacza porażkę. Jeśli generałowie stoją na przeciwko siebie i żaden gracz nie może wykonać prawidłowego ruchu wówczas jest remis – bikjang.</p>
 
         <p>Strażnicy (3pkt)
-        blue_saRed_Sa
-
-
-
-
-
-
 
         Strażnicy nazywani są też często asystentami bądź mandarynami (znak na figurze to sa). Ustawia się ich po lewej i prawej stronie generała. Ponieważ jest to najbliższa straż generała, tak jak i on nie mogą opuszczać pałacu. Strażnik z racji na sprawowaną funkcję i ograniczenia pola ruchów wyłącznie do pałacu jest figurą defensywną.</p>
 
         <p>Słonie (3pkt)
-        Blue_SangRed_Sang
-
-
-
-
-
-
 
         Znak opisujący słonie to sang. Ruch słonia przypomina trochę ruch szachowego skoczka – z tą różnicą, że ma trochę większy zasięg (1 pole poziomo/pionowo i 2 po ukosie). Dodatkową różnicą jest to, że słoń w Janggi nie może przeskakiwać przez inne figury – zatem jeśli cokolwiek stoi na jego drodze, nie może wykonać ruchu. Jest kilka możliwości ustawienia słoni na planszy. Ogólna zasada jest taka, że słonia ustawia się po zewnętrznej stronie strażnika. Natomiast mogą stać albo bezpośrednio przy nim, albo o jedno pole dalej, zamieniając się z koniem miejscami(patrz (patrz pozycje startowe).</p>
 
         <p>Konie (5pkt)
-        Blue_MaRed_Ma
-
-
-
-
-
-
 
         Figura opisana jako ma jest bardzo podobna do szachowego skoczka – jedno pole pionowo/poziomo i jedno po ukosie (litera „L”). Różnica polega na tym, że koń z Janggi nie może przeskakiwać innych figur (zatem ruch możliwy jest jedynie gdy droga do ruchu na planszy jest całkiem pusta).</p>
 
         <p>Rydwany (13pkt)
-        Blue_ChaRed_Cha
-
-
-
-
-
-
 
         Rydwany, oznaczane jako cha, tak jak wieże w szachach ustawia się w narożniku planszy. Poruszają się dokładnie tak samo jak wieża, z tą różnicą, że w pałacu mogą również poruszać się wzdłuż przekątnych. Rydwan (tak jak szachowa wieża) nie może przeskakiwać przez inne figury.</p>
 
@@ -237,10 +225,6 @@
         Działo (oznaczone jako po) jest figurą, która wykonuje skoki przez inną figurę pionowo lub poziomo) na dowolną długość. Działa nie mogą zbijać się nawzajem oraz nie mogą przeskakiwać przez inne działa. Działa na początku gry ustawia się na linii bezpośrednio za pionami, pomiędzy dwoma skrajnymi pionkami (patrz pozycje startowe).</p>
 
         <p>Żołnierze (2pkt)</p>
-
-
-
-
 
         Czerwony żołnierz oznaczony jest symbolem byeong natomiast zielony symbolem jol. Każda armia ma ich 5 na początku gry. Ustawia się je w szeregu przed działami na co drugim węźle. Poruszają się o jedno pole na wprost lub w bok. Mogą też poruszać się w pałacu, ale tylko do przodu.(czy w każdej linii – jak w książce McDade) W koreańskiej odmianie szachów nie ma promocji żołnierza na inną (mocniejszą) figurę w przypadku dojścia do ostatniej 10 poziomej linii. W niektórych regionalnych odmianach Janggi dopuszcza się promocję żołnierza na utraconą wcześniej figurę, ale nie jest to turniejowa reguła.
 
@@ -258,8 +242,9 @@
 
         <li>Konie na B1 i G1 (tzw. mat sang jang gi)</li>
         </ol>
-        
+            </div>
         <h2 id="szatrandz">Szatrandż</h2>
+        <div class="content">
         <p>https://bonaludo.com/2017/01/10/szaturanga-nestor-rodziny-szachow/</p> 
         <p>Szaturanga to gra istniejąca od VI stulecia naszej ery. Zrodziła się w Indiach rządzonych przez dynastię Guptów, a potem dotarła do Persji oraz do Europy, stając się przodkiem gry Szatrandż, która następnie przekształciła się w szachy.  W innych częściach świata zrodziły się inne gry szachowe – w Japonii Shogi, w Chinach Xiangqi i Janggi, w Birmie Sittuyin, w Tajlandii Makruk.</p>
 
@@ -299,8 +284,11 @@
         Na jednym polu może stać jedna bierka.
         Gracz nie może wejść swoją bierką na pole zajęte przez inna własną bierkę.
         Gracz może wejść swoją bierką na pole zajęte przez bierkę przeciwnika. W takiej sytuacji wroga bierka jest bita i usunięta z planszy.
-        Ruchy bierek
-        Król (radża) – porusza się o jedno pole w dowolną stronę, identycznie jak król w szachach.</p>
+        Ruchy bierek</p>
+        <p>Król (radża) – porusza się o jedno pole w dowolną stronę, identycznie jak król w szachach.</p>
+        <div class="image-alt">
+        <img src="krolc.png">
+        </div><br>
 
         <p>Według niektórych źródeł król może raz w czasie gry wykonać ruch konia, ale tylko jeśli nie był wcześniej szachowany.</p>
 
@@ -359,7 +347,9 @@
 
         Żołnierz jest promowany na bierkę, która na początku partii stała na polu przemiany. Jeśli więc pion dociera do pola, na którym na początku stała wieża, jest promowany na wieżę.
         Żołnierz może być promowany tylko jeśli gracz wcześniej stracił daną bierkę. Nie ma więc możliwości, aby gracz miał np. trzy konie albo trzy wieże.</p>
+        </div>
         <h2 id="czaturanga">Czaturanga</h2>
+        <div class="content">
         <p>https://lubimyszachy.pl/encyklopedia/czaturanga/ <p>Czaturanga powstała w dawnych Indiach, a pierwsze wzmianki o niej pochodzą z okresu VI wieku naszej ery. Z biegiem lat, jej zasady zaczerpnęli Arabowie, tworząc grę nazywaną Szatrandż. Następnie zaś wieść o Szatrandży dotarła do Europy, gdzie w późniejszych latach powstała wczesna odmiana szachów.</p>
 
         <p>Główną różnicą między Czaturangą, a szachami są figury, które nie tylko przyjmowały inną nazwę, ale również poruszały się w inny sposób niż bierki szachowe.</p>
@@ -381,7 +371,8 @@
         <p>Radża rusza podobnie jak współczesny Król. Zamiast Roszady jednak, miał prawo jedynie wykonać specjalne posunięcie (tylko raz czasie rozgrywki), identyczny jak ruch Skoczka.</p>
         <p>Pedati (piechota) poruszała się jak Pionek. Nie istniała jednak opcja ruchu o dwa pola w pierwszym posunięciu danym Pionem.</p>
         <p>Jak widzisz, zasady Czaturangi łudząco przypominają te, które znamy ze współczesnych Szachów. Gra toczyła się do momentu zamatowania jednego z Króli, natomiast w momencie dotarcia Piona na ostatnią linię szachownicy, ten również mógł awansować na inną figurę. Jedyną różnicą było to, że gracz nie mógł wybrać wówczas dowolnej innej figury, lecz musiał zamienić swego pionka na bierkę, stojącą wcześniej (w początkowym ustawieniu) na polu, na którym nastąpiła Promocja.</p>
-    </div>
+        </div>
+    
         <div class="sources">
         <h3>Spis Treści</h3>
         <a href="strona1.htm">Początek Królewskiej Gry</a> <br>
@@ -394,5 +385,8 @@
         <a href="strona9.htm">Bobby Fischer</a> <br>
         <a href="strona10.htm">Magnus Carlsen</a> <br>
     </div>
+        <div id="footer">
+        <h4>Wykonał Kacper Białas</h4>
+        </div>
     </div>
 </body>
