--- a/strona6.htm
+++ b/strona6.htm
@@ -47,5 +47,8 @@
         <a href="strona9.htm">Bobby Fischer</a> <br>
         <a href="strona10.htm">Magnus Carlsen</a> <br>
         </div>
+        <div id="footer">
+        <h4>Wykonał Kacper Białas</h4>
+        </div>
         </div>
     </body>
