--- a/strona8.htm
+++ b/strona8.htm
@@ -12,9 +12,17 @@
         <a href="index.html"><img src="logo1.png"></a>
         </div>
         <h1>Mistrzostwa Świata</h1>
-        <h3>Pierszy tytul mistrza</h3>
         <h3>Skandaliczne zasady walki o tytul</h3>
+        <div class="content">
+        <p>Początkowo, gdy chciałeś zostać mistrzem świata, musiałeś dogadać się z ówczensym mistrzem i zapłacić mu wyznaczoną przez niego kwote, było to nieuczciwe, ponieważ skutkowało to marnowaniem się wielu talentów. W końcu ludzie którzy nie byli bardzo bogaci nie mieli szans na zdobycie tytułu. Smutniejsze jest to że takie zasady panowały bardzo długo, obecne reguły wprowadzono dopiero po drugiej wojnie światowej.</p></div>
+        <div class="content">
+        <h3>Pierszy oficjalny tytul mistrza</h3>
+        <p>Pierwszym oficjalnym mistrzem był - Wilhelm Steinitz, który wygrał pierwsze oficjalne mistrzostwa świata w 1886 roku. Następnie obronił tytuł 3 razy w 1889,1891 i 1892 roku.</p>
+        </div>
         <h3>Zmiana zasad i poczatek organizacji fide</h3>
+        <div class="content">
+        <p>W 1946 po śmierci Aleksandra Alekhina w 1946 który był ówczesnym mistrzem świata. FIDE przejeło kontrolę nad organizacją mistrzostw świata i zorganizowano w 1948 roku pierwsze mistrzostwa FIDE. Dzięki tej zmianie pretendenci do tytułu mistrza nie musieli już płacić pieniędzy mistrzowi</p>
+        </div>
         <h3>Top 10 zawodników w rankingu FIDE</h3>
         <div class="content">
         <table>
@@ -91,6 +99,9 @@
         <a href="strona8.htm">Historia Mistrzostw Świata</a> <br> 
         <a href="strona9.htm">Bobby Fischer</a> <br>
         <a href="strona10.htm">Magnus Carlsen</a> <br>
+        </div>
+        <div id="footer">
+        <h4>Wykonał Kacper Białas</h4>
         </div>
         </div>
     </body>
