--- a/strona1.htm
+++ b/strona1.htm
@@ -28,5 +28,8 @@
         <a href="strona8.htm">Historia Mistrzostw Świata</a> <br> 
         <a href="strona9.htm">Bobby Fischer</a> <br>
         <a href="strona10.htm">Magnus Carlsen</a> <br>
+        <div id="footer">
+        <h4>Wykonał Kacper Białas</h4>
+        </div>
         </div>
     </body>
