--- a/strona2.htm
+++ b/strona2.htm
@@ -244,8 +244,7 @@
         </ol>
             </div>
         <h2 id="szatrandz">Szatrandż</h2>
-        <div class="content">
-        <p>https://bonaludo.com/2017/01/10/szaturanga-nestor-rodziny-szachow/</p> 
+        <div class="content"> 
         <p>Szaturanga to gra istniejąca od VI stulecia naszej ery. Zrodziła się w Indiach rządzonych przez dynastię Guptów, a potem dotarła do Persji oraz do Europy, stając się przodkiem gry Szatrandż, która następnie przekształciła się w szachy.  W innych częściach świata zrodziły się inne gry szachowe – w Japonii Shogi, w Chinach Xiangqi i Janggi, w Birmie Sittuyin, w Tajlandii Makruk.</p>
 
         <p>Dziś wielu ludzi wierzy, że współczesne Szachy są starą grą. Bohaterów grających w Szachy przedstawia się w filmach lub powieściach z akcją osadzoną w starożytności lub średniowieczu. Spotkałem się z mitami o greckich filozofach grających w Szachy. To tylko mity, bo współczesne szachy powstały jako produkt ewolucji innych wcześniejszych gier (i ewolucji samych szachów). W Europie od XIII wieku modyfikowano Szatrandż, ale dopiero w XV wieku wypracowano coś naprawdę podobnego do szachów. Zasady dotyczące pata dopracowano dopiero w XIX wieku, podobnie jak zasady dotyczące roszady oraz pierwszego ruchu dla białych! Współczesne szachy są więc stosunkowo młodą grą.</p>
@@ -293,10 +292,14 @@
         <p>Według niektórych źródeł król może raz w czasie gry wykonać ruch konia, ale tylko jeśli nie był wcześniej szachowany.</p>
 
         <p>Minister (mantri) – porusza się o jedno pole w dowolną stronę na ukos.</p>
-
+        <div class="image-alt">
+        <img src="minc.png">
+        </div>
         <p>Słoń (gadża) – porusza się o dwa pola na ukos, przeskakując pole pośrednie. Tak przynajmniej mówi większość źródeł.
-
-        Uwaga: Według niektórych źródeł słoń porusza się inaczej – o jedno pole do przodu lub o jedno pole na ukos (podobnie jak srebrny generał w grze shogi). Są też źródła mówiące, że słoń porusza się o dwa pola pionowo lub poziomo w dowolną stronę, przeskakując pierwsze pole.</p>
+        <div class="image-alt">
+        <img src="slonc.png">
+        </div>
+        <p>Uwaga: Według niektórych źródeł słoń porusza się inaczej – o jedno pole do przodu lub o jedno pole na ukos (podobnie jak srebrny generał w grze shogi). Są też źródła mówiące, że słoń porusza się o dwa pola pionowo lub poziomo w dowolną stronę, przeskakując pierwsze pole.</p>
 
         <p>Koń (aszwa) – porusza się tak jak skoczek w szachach, czyli o dwa pola pionowo i jedno poziomo lub dwa poziomo i następnie jedno pionowo. Kompletny ruch konia przybiera kształt litery L. Koń może skakać nad innymi bierkami.</p>
 
@@ -312,19 +315,19 @@
         Uwaga: W Szaturandze nie ma możliwości przeskoczenia piechurem dwóch pól w pierwszym ruchu (piony mogą tak robić w szachach). Piechurzy w szaturandze mogą zawsze ruszyć się tylko o jedno pole.</p>
 
         <p>Szach
-        W Szaturandze celem każdego gracza jest król przeciwnika, a konkretnie chodzi o tzw. zamatowanie króla. W związku z powyższym każdy z graczy ma obowiązek chronić swojego króla przed atakiem.  Realizacja tego obowiązku ma znaczenie przy tzw. szachu.
+        W Szaturandze celem każdego gracza jest król przeciwnika, a konkretnie chodzi o tzw. zamatowanie króla. W związku z powyższym każdy z graczy ma obowiązek chronić swojego króla przed atakiem.  Realizacja tego obowiązku ma znaczenie przy tzw. szachu.</p>
 
-        Szach występuje wtedy, gdy jakaś figura zagrozi królowi biciem. W takiej sytuacji gracz grożący biciem króla powinien powiedzieć “szach”, natomiast gracz, którego król jest zagrożony, musi wykonać ruch chroniący króla przed zabiciem. Można to zrobić poprzez odsunięcie króla na inne pole, przesłonięcie króla inna bierką albo zbicie bierki, która zagraża królowi.
+        <p>Szach występuje wtedy, gdy jakaś figura zagrozi królowi biciem. W takiej sytuacji gracz grożący biciem króla powinien powiedzieć “szach”, natomiast gracz, którego król jest zagrożony, musi wykonać ruch chroniący króla przed zabiciem. Można to zrobić poprzez odsunięcie króla na inne pole, przesłonięcie króla inna bierką albo zbicie bierki, która zagraża królowi.</p>
 
-        W sytuacji widocznej poniżej czarny król jest szachowany przez białą wieżę (mogłaby ona zbić króla w następnym ruchu). Gracz czarny ma obowiązek chronić króla. Może to zrobić na trzy sposoby:
+        <p>W sytuacji widocznej poniżej czarny król jest szachowany przez białą wieżę (mogłaby ona zbić króla w następnym ruchu). Gracz czarny ma obowiązek chronić króla. Może to zrobić na trzy sposoby:
 
         zbijając wieżę słoniem,
         zasłaniając króla doradcą lub
-        odchodząc królem na pole przed doradcą, dzięki czemu zejdzie z “linii rażenia” wieży.
+        odchodząc królem na pole przed doradcą, dzięki czemu zejdzie z “linii rażenia” wieży.</p>
 
-        Obowiązek obrony króla przy szachu może mieć duże znaczenie taktyczne. W sytuacji pokazanej poniżej czarny słoń szachuje białego króla i jednocześnie zagraża białej wieży. Gracz Biały nie może uciec wieżą. Ma obowiązek chronienia króla, czyli musi wykonać ruch “uciekający” Królem. W następnym ruchu słoń może zbić wieżę.
+        <p>Obowiązek obrony króla przy szachu może mieć duże znaczenie taktyczne. W sytuacji pokazanej poniżej czarny słoń szachuje białego króla i jednocześnie zagraża białej wieży. Gracz Biały nie może uciec wieżą. Ma obowiązek chronienia króla, czyli musi wykonać ruch “uciekający” Królem. W następnym ruchu słoń może zbić wieżę.</p>
 
-        Uwaga: Król nie może wejść pod szach, a więc niedozwolone jest wykonanie nim takich ruchów, które postawią go w polu rażenia jakiejś figury.</p>
+        <p>Uwaga: Król nie może wejść pod szach, a więc niedozwolone jest wykonanie nim takich ruchów, które postawią go w polu rażenia jakiejś figury.</p>
 
         <p>Cel gry – mat
         Jak już wspomniano, celem gry jest zamatowanie króla przeciwnika.
@@ -350,7 +353,7 @@
         </div>
         <h2 id="czaturanga">Czaturanga</h2>
         <div class="content">
-        <p>https://lubimyszachy.pl/encyklopedia/czaturanga/ <p>Czaturanga powstała w dawnych Indiach, a pierwsze wzmianki o niej pochodzą z okresu VI wieku naszej ery. Z biegiem lat, jej zasady zaczerpnęli Arabowie, tworząc grę nazywaną Szatrandż. Następnie zaś wieść o Szatrandży dotarła do Europy, gdzie w późniejszych latach powstała wczesna odmiana szachów.</p>
+        <p>Czaturanga powstała w dawnych Indiach, a pierwsze wzmianki o niej pochodzą z okresu VI wieku naszej ery. Z biegiem lat, jej zasady zaczerpnęli Arabowie, tworząc grę nazywaną Szatrandż. Następnie zaś wieść o Szatrandży dotarła do Europy, gdzie w późniejszych latach powstała wczesna odmiana szachów.</p>
 
         <p>Główną różnicą między Czaturangą, a szachami są figury, które nie tylko przyjmowały inną nazwę, ale również poruszały się w inny sposób niż bierki szachowe.</p>
 
