--- a/strona7.htm
+++ b/strona7.htm
@@ -21,7 +21,7 @@
 
         <p>W 1928 w Hadze FIDE jako pierwsza organizacja sportowa podjęła historyczną decyzję – zrównała prawa amatorów i zawodowców.</p>
 
-        <p>Początkowo FIDE była dość słabą organizacją, ponieważ Związek Radziecki z przyczyn politycznych odmówił przystąpienia do federacji. Sytuacja uległa zmianie w 1946 roku, po śmierci ówczesnego mistrza świata Aleksandra Alechina FIDE przystąpiła do organizacji turnieju w celu wyłonienia następcy. Po trudnych negocjacjach radziecki związek szachowy dołączył do federacji, z wieloma zastrzeżeniami dotyczącymi przyszłego kształtu tej organizacji.</p>
+        <p>Początkowo FIDE była dość słabą organizacją, ponieważ <strong>Związek Radziecki z przyczyn politycznych odmówił przystąpienia do federacji</strong>. Sytuacja uległa zmianie w 1946 roku, po śmierci ówczesnego mistrza świata Aleksandra Alechina FIDE przystąpiła do organizacji turnieju w celu wyłonienia następcy. Po trudnych negocjacjach radziecki związek szachowy dołączył do federacji, z wieloma zastrzeżeniami dotyczącymi przyszłego kształtu tej organizacji.</p>
 
         <p>W 1948 roku odbył się turniej o mistrzostwo świata, w którym zwyciężył Michaił Botwinnik. Od tego czasu aż do 1993 roku mistrz świata był wyłaniany w oficjalnych meczach organizowanych przez FIDE. Ustalono wielostopniowe eliminacje (turnieje strefowe, międzystrefowe i mecze kandydatów), których zwycięzca uzyskuje prawo gry z mistrzem świata.</p>
 
