--- a/strona8.htm
+++ b/strona8.htm
@@ -25,7 +25,7 @@
         </div>
         <h3>Top 10 zawodników w rankingu FIDE</h3>
         <div class="content">
-        <table style="width: 90%">
+        <table style="width: 90%; color: red;">
             <thead>
                 <tr>
                     <th>Imię</th>
